saving best model

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ jena_climate_2009_2016.csv.zip
 .images.tar.gz.2
 .jena_climate_2009_2016.csv
 .jena_climate_2009_2016.csv.zip
+jena_dense.keras
+.jena_dense.keras
