--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ jena_conv.keras
 .jena_conv.keras
 jena_lstm.keras
 .jena_lstm.keras
+embeddings_bidir_gru_with_masking.keras
+.embeddings_bidir_gru_with_masking.keras
