--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,7 @@ transformer_encoder.keras
 .spa-eng/
 .transformer_encoder.keras
 checkpoint_path.keras
+feature_extraction_with_data_augmentation.keras
+fine_tuning.keras
+.feature_extraction_with_data_augmentation.keras
+.fine_tuning.keras
