chapter 9 done and some gitignore changes

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,5 @@ feature_extraction_with_data_augmentation.keras
 fine_tuning.keras
 .feature_extraction_with_data_augmentation.keras
 .fine_tuning.keras
+filters_for_layer_block3_sepconv1.png
+.filters_for_layer_block3_sepconv1.png
